# multilogic

./: Cargo.toml  README.md
samples/: binero  stars  voisimage
src/: README.md  binero.rs  kakuro.rs  kdoku.rs  lib.rs  main.rs  stars.rs  voisimage.rs
src/kakuro/: mod.rs
src/kdoku/: mod.rs  parse.rs
src/solve/: integer.rs  mod.rs  util.rs
src/stars/: mod.rs
src/util/: choice.rs  integer.rs  matrix.rs  mod.rs  solve.rs
src/voisimage/: mod.rs
