[package]
name = "multilogic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
varisat = { git = "https://github.com/jix/varisat.git" }
thiserror = "1.0.37"
nom = "7.1.1"
anyhow = "1.0.66"
termcolor = { version="1.4.0", optional=true }
clap = { version = "4.4.8", features = ["derive"] }
